# clientcommon

./: CMakeLists.txt
cmake/: include.cmake  sources.cmake  test.cmake
docs/: README.md
